Updating the lot to java 11 and fixing

--- a/web/site/index.html
+++ b/web/site/index.html
@@ -25,8 +25,8 @@
     function httpGet() {
         var value = document.getElementById("quote").value;
         var req = new XMLHttpRequest();
-        // req.open("GET", "http://localhost:8080/back-end/rest/quote/" + value, false);
-        req.open("GET", "http://192.168.10.100:8080/back-end/rest/quote/" + value, false);
+        req.open("GET", "http://localhost:8080/back-end/rest/quote/" + value, false);
+        // req.open("GET", "http://192.168.10.100:8080/back-end/rest/quote/" + value, false);
         req.send(null);
         var resp = JSON.parse(req.responseText);
         document.getElementById("content").innerHTML = resp.quote;
